feat: add endpoints for roles and permissions
